# 2048

./: .gitignore  README.md  pyproject.toml
2048/: game.py  ui.py  utils.py
