[tool.poetry]
name = "2048"
version = "0.1.0"
description = "Projet où j'essaie de coder un 2048, de faire une interface graphique et de faire une stratégie de résolution."
authors = ["Gabriel Watkinson <gabriel.watkinson@ensae.fr>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pygame = "^2.0.1"
sklearn = "^0.0"
matplotlib = "^3.4.1"
torch = {version = "^1.8.1", python = "^3.8", platform = "windows"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
